--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
-body { margin: 0; font-family: sans-serif; }
+
+body {
+  margin: 0;
+  font-family: monospace;
+  background-color: #111;
+  color: #eee;
+  text-align: center;
+  padding-top: 20vh;
+}
